<package>
  <name>object_tracking_ros</name>
  <version>0.0.1</version>
  <description>
    stuff
  </description>
  <license>MIT</license>
  <maintainer email="jtb2013@gmail.com">James Bell</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
</package>


